# thegame

./: Cargo.toml  log4rs.yaml
src/: animator.rs  event.rs  game.rs  input.rs  layout.rs  main.rs  mock.rs  palette.rs  prelude.rs  renderer.rs  sync.rs  window.rs
src/sprite/: mod.rs  sprite.rs
src/sprite/character/: character.rs  knight.rs  mod.rs
