[package]
name = "thegame"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
crossterm = "0.29.0"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = "1.3.0"
pixels = "0.13.0"
ratatui = "0.29.0"
thiserror = "2.0.12"
winit = { version = "0.29.9", default-features = false, features = ["x11", "rwh_05", "wayland", "wayland-dlopen"] }

[dev-dependencies]
logtest = "2.0.0"
